fix(button): Align icon and text center line

--- a/packages/mdc-button/_mixins.scss
+++ b/packages/mdc-button/_mixins.scss
@@ -136,7 +136,8 @@
   height: 16px;
   margin-right: 8px;
   font-size: 16px;
-  vertical-align: middle;
+  line-height: inherit;
+  vertical-align: top;
 }
 
 @mixin mdc-button--stroked_() {
